--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,9 @@
 services:
   - type: web
-    name: kill4rai
-    runtime: python
-    buildCommand: ""
-    startCommand: "python main.py"
+    name: kill4rai-ai
+    env: python
+    buildCommand: pip install -r requirements.txt
+    startCommand: python main.py
     envVars:
-      - key: FLASK_ENV
-        value: production
+      - key: API_KEY
+        sync: false
