--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: kill4rai-ai
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: python main.py
+    startCommand: gunicorn main:app --bind 0.0.0.0:10000
     envVars:
       - key: API_KEY
         sync: false
